--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,5 +51,16 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
+
+    <!-- # 数学公式 -->
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+            inlineMath: [['$','$']]
+            }
+        });
+    </script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
     <script></script>
 </head>
