--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,7 +57,7 @@
     <script type="text/javascript" async src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
     <!-- 网站统计 -->
-    <script>
+    <!-- <script>
         var _hmt = _hmt || [];
         (function() {
           var hm = document.createElement("script");
@@ -65,7 +65,7 @@
           var s = document.getElementsByTagName("script")[0]; 
           s.parentNode.insertBefore(hm, s);
         })();
-    </script>
+    </script> -->
 
     <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
