--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,9 +53,9 @@
     <!-- ga & ba script hoook -->
 
     <!-- # 数学公式 -->
-    <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+<!--     <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
     <script type="text/javascript" async src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-
+ -->
     <!-- 网站统计 -->
     <!-- <script>
         var _hmt = _hmt || [];
