--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -1,4 +1,4 @@
-<div id="mathjax"></div>
+<!-- <div id="mathjax"></div>
      <script type="text/x-mathjax-config">
      MathJax.Hub.Config({
          tex2jax: {
@@ -15,3 +15,4 @@ MathJax.Hub.Queue(function() {
 </script>
 
 <script src="https://cdn.bootcdn.net/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+ -->
